# knowledge-extractor

./: .gitignore  .pymarkdown.json  AGENTS.md  README.md  TODO.md  main.py  pyproject.toml
docs/seed/: extractor.md
docs/specs/: knowledge-extractor.md  latex-formula-extraction.md  markdown-linter.md
src/knowledge_extractor/: ai.py  cli.py  discovery.py  filters.py  index.py  linter.py  logging_setup.py  pipeline.py  tracker.py
src/knowledge_extractor/extractors/: docx_extractor.py  excel_extractor.py  image_extractor.py  pdf_extractor.py  pptx_extractor.py  utils.py
src/knowledge_extractor/formulas/: __init__.py  docx_formulas.py  pdf_formulas.py  pptx_formulas.py  renderer.py
